--- a/html/home/atualizacao.html
+++ b/html/home/atualizacao.html
@@ -38,7 +38,7 @@
                                 <button class="btn btn-secondary type="button" onclick="voltar()">Voltar</button>
                             </span>
                             <span class="group-btn col-lg-6">     
-                                <button class="btn btn-success" type="button" onclick="save_profile()">Salvar</button>
+                                <button class="btn btn-success" type="submit">Salvar</button>
                             </span>
                         </div>
                     </form>
