--- a/html/home/home.html
+++ b/html/home/home.html
@@ -49,8 +49,8 @@
                 <br/>
                 <hr class="colorgraph">
                 <div id="menu-center" class="btn-menu text-center">
-                    <p><button type="button" class="badge bg-success p-2" id="appJogar" onclick="jogar()">JOGAR</button></p>
-                    <p><button type="button" class="badge bg-primary p-2" id="appRankingGeral" onclick="ranking_geral()">RANKING</button></p>
+                    <p><button type="button" class="badge bg-success p-2" id="btnJogar" onclick="jogar()">JOGAR</button></p>
+                    <p><button type="button" class="badge bg-primary p-2" id="btnRankingGeral" onclick="ranking_geral()">RANKING</button></p>
                 </div>
                 <hr class="colorgraph">
                 <footer>
