--- a/html/home/atualizacao.html
+++ b/html/home/atualizacao.html
@@ -21,7 +21,7 @@
                     <form class="form-signin">
                         <h3 class="text-center">Atualizar Perfil</h3>
                         <hr class="colorgraph">
-                        <input id="nome" name="nome" id="nome" class="form-control" placeholder="Nome completo" required/>
+                        <input id="nome" type="text" name="nome" id="nome" class="form-control" placeholder="Nome completo" required/>
                         <select id="profile" name="profile" class="form-select">
                             <option value="aluno" selected>Aluno</option>
                             <option value="professor">Professor</option>
